# Chess.com-Message-Spammer

./: .gitignore  README.md  chess_driver.py  creds.py  logger.py  main.py  pyproject.toml  raw_game_requester.py  scrape_games.py  send_messages.py
.claude/: settings.local.json
tests/: test_logins.py
