[project]
name = "chess-dm-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "matt-lenovo-laptop",email = "matmigg0804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "psutil (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
