[project]
name = "chess-dm-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "matt-lenovo-laptop",email = "matmigg0804@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
